fix: Prevent crash due to missing process.env
Adds a check for API_KEY and defines a browser safety bridge to ensure `process.env` is available in the browser environment. This prevents runtime crashes related to environment variable access.

--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
       z-index: 5;
     }
   </style>
+  <script>
+    // Browser Safety Bridge: Ensures 'process.env' exists to prevent crash.
+    // In production, most bundlers or hosts will replace this or define it.
+    window.process = window.process || { env: {} };
+  </script>
   <script type="importmap">
   {
     "imports": {
