--- a/index.html
+++ b/index.html
@@ -62,19 +62,20 @@
   </style>
   <script>
     // Browser Safety Bridge: Ensures 'process.env' exists to prevent crash.
-    // In production, most bundlers or hosts will replace this or define it.
     window.process = window.process || { env: {} };
   </script>
   <script type="importmap">
-  {
-    "imports": {
-      "@google/genai": "https://esm.sh/@google/genai@^1.40.0",
-      "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-      "react/": "https://esm.sh/react@^19.2.4/",
-      "react": "https://esm.sh/react@^19.2.4"
-    }
+{
+  "imports": {
+    "@google/genai": "https://esm.sh/@google/genai@^1.40.0",
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "react/": "https://esm.sh/react@^19.2.4/"
   }
-  </script>
+}
+</script>
 </head>
 <body class="h-screen w-screen overflow-hidden relative">
   <!-- Mature Grid Background -->
@@ -83,6 +84,10 @@
   
   <div class="scanline"></div>
   <div class="fixed inset-0 bg-noise z-0"></div>
+  
   <div id="root" class="relative z-20 h-full w-full"></div>
+
+  <!-- Entry Point Script -->
+  <script type="module" src="./index.tsx"></script>
 </body>
 </html>
